Se adiciono condificion else.

--- a/numero_magico.html
+++ b/numero_magico.html
@@ -33,6 +33,9 @@
 		} else if ( numero_ingresado > numero_magico ){
 			mensaje = "El número ingresado es mayor";
 			SolicitarNumero(mensaje);
+		} else {
+			mensaje = "Ingresa un número entre " + min + " y " + max;
+			SolicitarNumero(mensaje);
 		}
 	}
 
